// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user list correctly toggles create user 1`] = `
.c1 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
}

.c1:hover {
  opacity: 0.90;
}

.c1:focus {
  outline: none;
}

.c1:active {
  opacity: 0.80;
}

.c1:disabled:hover {
  opacity: 1;
  cursor: auto;
}

.c2 {
  background-color: transparent;
  border: 1px solid;
}

.c6 {
  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
  padding: 40px;
  border-radius: 10px;
}

.c5 {
  display: inline;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.c11 {
  height: 80px;
}

.c12 {
  min-height: 50px;
  width: 100%;
  border: none;
  border-radius: 5px;
  font-family: 'Libre Franklin',sans-serif;
  font-size: 1rem;
  padding-left: 10px;
  opacity: 0.9;
  border: 1px solid transparent;
}

.c12:focus {
  outline: none border:1px solid;
}

.c7 {
  position: absolute;
  left: 0;
  right: 0;
  top: 50%;
  margin-left: auto;
  margin-right: auto;
  min-height: 450px;
  width: 100%;
  max-width: 400px;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
}

.c8 {
  height: 100%;
  max-height: 450px;
  display: grid;
  grid-template-rows: [title] 1fr [form ]4fr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  grid-row: title;
  text-align: center;
}

.c10 {
  height: 95%;
  grid-row: form;
  display: grid;
  grid-template-rows: auto;
  grid-row-gap: 40px;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c13> button {
  min-width: 150px;
}

.c0 {
  margin: 0px 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  margin-top: 16px;
}

@media (max-width:47.9375em) {
  .c7 {
    padding: 16px;
    height: 100%;
  }
}

@media (max-width:47.9375em) {
  .c13 {
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-flex-direction: column-reverse;
    -ms-flex-direction: column-reverse;
    flex-direction: column-reverse;
  }
}

@media (max-width:47.9375em) {
  .c3 {
    display: none;
  }
}

<div>
  <div
    className="c0"
  >
    <h2>
      Users
    </h2>
    <button
      className="c1 c2"
      onClick={[Function]}
    >
      <i
        className="fas fa-plus"
      />
       
      <span
        className="c3"
      >
        Create User
      </span>
    </button>
  </div>
  <div
    className="c4"
  />
  <div
    className="c5"
    onClick={[Function]}
  >
    <div
      className="c6 c7"
    >
      <div
        className="c8"
      >
        <h2
          className="c9"
        >
          Create new user
        </h2>
        <form
          className="c10"
          onSubmit={[Function]}
        >
          <div
            className="c11"
          >
            <input
              className="c12"
              name="username"
              onChange={[Function]}
              placeholder="Username"
              type="username"
              value=""
            />
          </div>
          <div
            className="c11"
          >
            <input
              className="c12"
              name="password"
              onChange={[Function]}
              placeholder="Password"
              type="password"
              value=""
            />
          </div>
          <div
            className="c11"
          >
            <input
              className="c12"
              name="confirmPassword"
              onChange={[Function]}
              placeholder="Confirm password"
              type="password"
              value=""
            />
          </div>
          <div
            className="c13"
          >
            <button
              className="c1 c2"
              onClick={[Function]}
            >
              Cancel
            </button>
            <button
              className="c1"
            >
              Create user
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`user list correctly toggles create user 2`] = `
.c1 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
}

.c1:hover {
  opacity: 0.90;
}

.c1:focus {
  outline: none;
}

.c1:active {
  opacity: 0.80;
}

.c1:disabled:hover {
  opacity: 1;
  cursor: auto;
}

.c2 {
  background-color: transparent;
  border: 1px solid;
}

.c0 {
  margin: 0px 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  margin-top: 16px;
}

@media (max-width:47.9375em) {

}

@media (max-width:47.9375em) {

}

@media (max-width:47.9375em) {
  .c3 {
    display: none;
  }
}

<div>
  <div
    className="c0"
  >
    <h2>
      Users
    </h2>
    <button
      className="c1 c2"
      onClick={[Function]}
    >
      <i
        className="fas fa-plus"
      />
       
      <span
        className="c3"
      >
        Create User
      </span>
    </button>
  </div>
  <div
    className="c4"
  />
</div>
`;

exports[`user list doesn't try to render users on error 1`] = `
.c1 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
}

.c1:hover {
  opacity: 0.90;
}

.c1:focus {
  outline: none;
}

.c1:active {
  opacity: 0.80;
}

.c1:disabled:hover {
  opacity: 1;
  cursor: auto;
}

.c2 {
  background-color: transparent;
  border: 1px solid;
}

.c0 {
  margin: 0px 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  margin-top: 16px;
}

@media (max-width:47.9375em) {
  .c3 {
    display: none;
  }
}

<div>
  <div
    className="c0"
  >
    <h2>
      Users
    </h2>
    <button
      className="c1 c2"
      onClick={[Function]}
    >
      <i
        className="fas fa-plus"
      />
       
      <span
        className="c3"
      >
        Create User
      </span>
    </button>
  </div>
  <div
    className="c4"
  />
</div>
`;

exports[`user list refreshes on create user success 1`] = `
.c1 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
}

.c1:hover {
  opacity: 0.90;
}

.c1:focus {
  outline: none;
}

.c1:active {
  opacity: 0.80;
}

.c1:disabled:hover {
  opacity: 1;
  cursor: auto;
}

.c2 {
  background-color: transparent;
  border: 1px solid;
}

.c7 {
  cursor: pointer;
}

.c5 {
  min-height: 60px;
  padding: 0px 16px;
  margin: 0px;
  display: grid;
  grid-template-columns: 3fr 1fr 25px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  margin: 0px;
}

.c8 {
  float: right;
  margin-right: 10px;
  grid-column: 3;
}

.c0 {
  margin: 0px 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  margin-top: 16px;
}

@media (max-width:47.9375em) {
  .c3 {
    display: none;
  }
}

<div>
  <div
    className="c0"
  >
    <h2>
      Users
    </h2>
    <button
      className="c1 c2"
      onClick={[Function]}
    >
      <i
        className="fas fa-plus"
      />
       
      <span
        className="c3"
      >
        Create User
      </span>
    </button>
  </div>
  <div
    className="c4"
  >
    <div
      className="c5"
    >
      <p
        className="c6"
      >
        test
      </p>
      <i
        className="c7 c8 far fa-trash-alt"
        onClick={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`user list renders correctly 1`] = `
.c1 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
}

.c1:hover {
  opacity: 0.90;
}

.c1:focus {
  outline: none;
}

.c1:active {
  opacity: 0.80;
}

.c1:disabled:hover {
  opacity: 1;
  cursor: auto;
}

.c2 {
  background-color: transparent;
  border: 1px solid;
}

.c0 {
  margin: 0px 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  margin-top: 16px;
}

@media (max-width:47.9375em) {
  .c3 {
    display: none;
  }
}

<div>
  <div
    className="c0"
  >
    <h2>
      Users
    </h2>
    <button
      className="c1 c2"
      onClick={[Function]}
    >
      <i
        className="fas fa-plus"
      />
       
      <span
        className="c3"
      >
        Create User
      </span>
    </button>
  </div>
  <div
    className="c4"
  />
</div>
`;

exports[`user list renders correctly 2`] = `
.c1 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
}

.c1:hover {
  opacity: 0.90;
}

.c1:focus {
  outline: none;
}

.c1:active {
  opacity: 0.80;
}

.c1:disabled:hover {
  opacity: 1;
  cursor: auto;
}

.c2 {
  background-color: transparent;
  border: 1px solid;
}

.c5 {
  min-height: 60px;
  padding: 0px 16px;
  margin: 0px;
  display: grid;
  grid-template-columns: 3fr 1fr 25px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  margin: 0px;
}

.c7 {
  float: right;
  width: 80px;
  padding: 4px;
  font-weight: bold;
  text-align: center;
  border-radius: 6px;
}

.c0 {
  margin: 0px 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  margin-top: 16px;
}

@media (max-width:47.9375em) {
  .c3 {
    display: none;
  }
}

<div>
  <div
    className="c0"
  >
    <h2>
      Users
    </h2>
    <button
      className="c1 c2"
      onClick={[Function]}
    >
      <i
        className="fas fa-plus"
      />
       
      <span
        className="c3"
      >
        Create User
      </span>
    </button>
  </div>
  <div
    className="c4"
  >
    <div
      className="c5"
    >
      <p
        className="c6"
      >
        test
      </p>
    </div>
    <div
      className="c5"
    >
      <p
        className="c6"
      >
        admin
      </p>
      <p
        className="c7"
      >
        admin
      </p>
    </div>
  </div>
</div>
`;
